fix: harden canonical dump recovery